--- a/src/components/UBChat/Detail/detail.css
+++ b/src/components/UBChat/Detail/detail.css
@@ -1,8 +1,10 @@
 .detail {
     flex: 1;
-  
+    border-right: 1px solid #dddddd35;
+    height: 93.5vh;
+
     .user {
-      padding: 30px 20px;
+      padding: 5% 4%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -10,15 +12,15 @@
       border-bottom: 1px solid #dddddd35;
   
       img {
-        width: 100px;
-        height: 100px;
+        width: 30%;
+        height: 20%;
         border-radius: 50%;
         object-fit: cover;
       }
     }
   
     .info {
-      padding: 20px;
+      padding: 10%;
       display: flex;
       flex-direction: column;
       gap: 25px;
@@ -30,7 +32,7 @@
           justify-content: space-between;
   
           img {
-            width: 30px;
+            width: 10%;
             height: 30px;
             background-color: rgba(17, 25, 40, 0.3);
             padding: 10px;
@@ -42,8 +44,8 @@
         .photos {
           display: flex;
           flex-direction: column;
-          gap: 20px;
-          margin-top: 20px;
+          gap: 15px;
+          margin-top: 4%;
   
           .photoItem {
             display: flex;
@@ -56,21 +58,21 @@
               gap: 20px;
   
               img {
-                width: 40px;
-                height: 40px;
+                width: 50%;
+                height: 30px;
                 border-radius: 5px;
                 object-fit: cover;
               }
   
               span {
-                font-size: 14px;
+                font-size: 90%;
                 color: lightgray;
                 font-weight: 300;
               }
             }
   
             .icon {
-              width: 30px;
+              width: 10%;
               height: 30px;
               background-color: rgba(17, 25, 40, 0.3);
               padding: 10px;
@@ -90,11 +92,6 @@
   
         &:hover {
           background-color: rgba(220, 20, 60, 0.796);
-        }
-  
-        &.logout{
-          padding: 10px;
-          background-color: #1a73e8;
         }
       }
     }
