--- a/src/components/UBChat/UBChatApp/UBChatApp.css
+++ b/src/components/UBChat/UBChatApp/UBChatApp.css
@@ -1,23 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-  
-body {
-  background-image: url("/bg.jpg");
-  /* display: flex; */
-  /* align-items: center;
-  justify-content: center; */
-  height: 100vh;
-  color: white;
-}
-  
   .container {
-    width: 60vw;
-    height: 85vh;
+    margin-top: 0%;
+    margin-left: 0%;
+    width: 100vw;
+    height: 80vh;
     border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
     display: flex;
   }
   
