--- a/src/components/UBChat/List/UserInfo/userInfo.css
+++ b/src/components/UBChat/List/UserInfo/userInfo.css
@@ -4,28 +4,14 @@
     align-items: center;
     justify-content: space-between;
   
-    .user {
+    .user p {
       display: flex;
+      position:relative;
+      margin-top: 20%;
+      left: 10%;
       align-items: center;
-      gap: 20px;
-  
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        object-fit: cover;
-      }
-    }
-  
-    .icons {
-      display: flex;
-      gap: 20px;
-  
-      img {
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
+      color: rgb(255, 255, 255);
+      font-size: 40px;
     }
   }
 
